syntax = "proto3";
package ebi.rpc;

message RequestMetadata {
  bytes request_uuid = 1;
  bytes source_id = 2;
  bool relayed = 3;
}

message ResponseMetadata {
  bytes request_uuid = 1;
  uint32 return_code = 2;
  optional ErrorData error_data = 3; //[!] Only used for queries, move into Response/Data ??
}

message ErrorData {
  repeated string error_data = 1;
}

//[#] Query Protocol 

message ClientQuery { //[x] 
  string query = 1;
  FileOrd file_ord = 2;
  bytes workspace_id = 4;
  bool atomic = 5;
  RequestMetadata metadata = 6;
}

message PeerQuery { //[x] 
  bytes query = 1;
  bytes workspace_id = 3;
  RequestMetadata metadata = 4;
}

message PeerQueryResponse { //[x] 
  bytes files = 1;
  ResponseMetadata metadata = 2;
}

message ClientQueryResponse { //[x] 
  bytes token = 1;
  uint32 packets = 2;
  ResponseMetadata metadata = 3;
}

message ClientQueryData { //[x] 
  bytes token = 1;
  repeated File files = 2;
  ResponseMetadata metadata = 3;

}


//[#] Workspace Operations 

message CreateWorkspace { //[x] 
  string name = 1;
  string description = 2;
  RequestMetadata metadata = 3;
} 

message EditWorkspace { //[x] //[?] Fields are Option<String> ??
  bytes workspace_id = 1;
  string name = 2;
  string description = 3;
  RequestMetadata metadata = 4;
} 

message EditWorkspaceResponse { //[x] 
  ResponseMetadata metadata = 1;
}

message CreateWorkspaceResponse { //[x] 
  bytes workspace_id = 1;
  ResponseMetadata metadata = 2;
}

message DeleteWorkspace { //[x] 
  bytes workspace_id = 1;
  RequestMetadata metadata = 4;
} 

message DeleteWorkspaceResponse { //[x] 
  ResponseMetadata metadata = 1;
}

message GetWorkspaces { //[x] 
  RequestMetadata metadata = 1;
}

message GetWorkspacesResponse { //[x] 
  repeated Workspace workspaces = 1;
  ResponseMetadata metadata = 2;
}

message Workspace {
  bytes workspace_id = 1;
  string name = 2;
  string description = 3;
  repeated Tag tags = 4;
}

//[#] Shelf Operations 

message AddShelf { //[x] 
  bytes peer_id = 1;
  string path = 2; 
  optional string name = 3;
  optional string description = 4;
  bytes workspace_id = 5;
  RequestMetadata metadata = 6;
} 

message EditShelf { //[x] //[?] Fields are Option<String> ??
  bytes shelf_id = 1;
  bytes workspace_id = 2;
  string name = 3;
  string description = 4;
  RequestMetadata metadata = 6;
} 

message EditShelfResponse { //[x] 
  ResponseMetadata metadata = 1;
}

message AddShelfResponse { //[x] 
  optional bytes shelf_id = 1;
  ResponseMetadata metadata = 2;
}

message GetShelves { //[x] 
  bytes workspace_id = 1;
  RequestMetadata metadata = 2;
}

message GetShelvesResponse { //[x] 
  repeated Shelf shelves = 1;
  ResponseMetadata metadata = 2;
}

message RemoveShelf { //[x] 
  bytes shelf_id = 1;
  bytes workspace_id = 2;
  RequestMetadata metadata = 3;
} 

message RemoveShelfResponse { //[x] 
  ResponseMetadata metadata = 1;
}

message Shelf {
  bytes shelf_id = 1;
  oneof owner {
    bytes node_id = 2;
    bytes sync_id = 3;
  }
  string name = 4;
  string description = 5;
  string path = 6;
}

//[#] Tag Operations 

message CreateTag { //[x] 
  bytes workspace_id = 1;
  string name = 2;
  uint64 priority = 3;
  optional bytes parent_id = 4;
  RequestMetadata metadata = 5;
} 

message CreateTagResponse { //[x] 
  optional bytes tag_id = 1;
  ResponseMetadata metadata = 2;
}

message EditTag { //[x] 
  bytes tag_id = 1;
  bytes workspace_id = 2;
  string name = 3;
  uint64 priority = 4;
  optional bytes parent_id = 5;
  RequestMetadata metadata = 6;
} 

message EditTagResponse { //[x] 
  ResponseMetadata metadata = 1;
}

message AttachTag { //[x] 
  bytes workspace_id = 1;
  bytes shelf_id = 2;
  bytes tag_id = 3;
  string path = 4; 
  RequestMetadata metadata = 5;
} 

message AttachTagResponse { //[x] 
  ResponseMetadata metadata = 1;
}

message DetachTag { //[x] 
  bytes workspace_id = 1;
  bytes shelf_id = 2;
  bytes tag_id = 3;
  string path = 4;
  RequestMetadata metadata = 5;
} 

message StripTag { //[x] 
  bytes workspace_id = 1;
  bytes shelf_id = 2;
  bytes tag_id = 3;
  string path = 4;
  RequestMetadata metadata = 5;
} 

message DetachTagResponse { //[x] 
  ResponseMetadata metadata = 1;
}

message StripTagResponse { //[x] 
  ResponseMetadata metadata = 1;
}

message DeleteTag { //[x] 
  bytes workspace_id = 1;
  bytes tag_id = 2;
  RequestMetadata metadata = 3;
} 

message DeleteTagResponse { //[x] 
  ResponseMetadata metadata = 1;
}

message Tag {
  bytes tag_id = 1;
  string name = 2;
  uint64 priority = 3;
  optional bytes parent_id = 4;
}

//[#] File Structures 

message FileOrd {
  OrderBy order_by = 1;
  bool ascending = 2;
}

enum OrderBy {
  NAME = 0;
  SIZE = 1;
  MODIFIED = 2;
  ACCESSED = 3;
  CREATED = 4;
  UNORDERED = 5;
}

message FileMetadata {
  uint64 size = 1;
  bool readonly = 2;
  optional int64 modified = 3;
  optional int64 accessed = 4;
  optional int64 created = 5;
  oneof os_metadata {
    UnixMetadata unix = 6;
    WindowsMetadata windows = 7;
    Empty error = 8;
    
  }
}

message Empty {}

message UnixMetadata {
  uint32 permissions = 1;
  uint32 uid = 2;
  uint32 gid = 3;
}

message WindowsMetadata {
  uint32 attributes = 1;
}

message File {
  string path = 1;
  FileMetadata metadata = 2;
}

//[#] Notification Protocol 

message Heartbeat {}

message Operation {
  ActionTarget target = 1;
  bytes id = 2;
  ActionType action = 3;
}

enum ActionTarget {
  WORKSPACE = 0;
  SHELF = 1;
  TAG = 2;
}

enum ActionType {
  CREATE = 0;
  EDIT = 1;
  DELETE = 2;
}

message PeerConnected {
  bytes peer_id = 1;
  string name = 2;
}
